--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Pay And Park</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="title_activity_help2">HELP2</string>
+    <string name="title_activity_help2">HELP</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
